remove scroll overflow issue

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -64,7 +64,7 @@
       line-height: $line_height_base;
       font-weight: $font_weight_base;
       margin: 1.5em 0;
-      overflow: scroll;
+      // overflow: scroll;  // Bad: On opera browsers it shows up every `p`!
     }
 
 
